Initial 1.16.5 port.  Dynamic icons are now refreshed properly on resource manager reloads.